[Mockup] Added semester shifting to skill tree, and fixed filtering bug.
mockup/css/custom.css
	-Added classes for the module list to remove the hidden/showing bug

mockup/css/main.css
	-Added additional styling for dragging, as well as a transition definition for the moduleBox divs for effects

mockup/js/script.js
	-forced all moduleBox animations to not be part of any queue.
	-fixed bug in assignSemester where modules would not shift semesters ahead properly.
	-added semester assignment logic for dragging and dropping moduleBoxes onto semesters
	-added logic to redirect the user to NUSMods should he/she want to plan the timetable for a semester.
	-all for..in replaced with proper for loops
	-various comments added.

mockup/js/skillTree.js
	-#skillTree is now droppable as well.
	-Various comments added.

--- a/mockup/css/custom.css
+++ b/mockup/css/custom.css
@@ -49,6 +49,12 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 }
+#module_list .module.hidden {
+    display:none;
+}
+#module_list .module.added {
+    display:none;
+}
 #module_list .module:hover{
 	background-color: #A1F57F;
 }
